samples/_failures_safe/1761401425_3f1524_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4eaac054.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_4eaac054.c:124: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4eaac054.c:123:9: error: expected declaration or statement at end of input
  123 |         if
      |         ^~
./samples/SAFE/__tmp_4eaac054.c:123:9: error: expected declaration or statement at end of input
